<resources>
    <string name="app_name">Order Coffee</string>
    <string name="input_name">Name</string>
    <string name="toppings">TOPPINGS</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate" translatable="false">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="order">ORDER</string>
</resources>
